# ML-Library

./: .gitignore  README.md  pyproject.toml  requirements.txt
DLModels/: CNN_Flax_NMIST.ipynb  simpleNN.ipynb
DeepLearning/CV/: CNN_Flax_NMIST.ipynb  mlp.ipynb  mlp.py  simpleNN_JAX_CIFA10.ipynb  simpleNN_JAX_MNIST.ipynb
DeepLearning/CV/Detection/Detectron2/: .gitignore  CopyCMMDJson.ipynb  MakeCMMDdataset.ipynb
DeepLearning/CV/Detection/mmdetection/: .gitignore  Convert_CMMD_2_COCO.ipynb  README.md  scrap.ipynb  test.ipynb  verify_the_installation.ipynb
DeepLearning/CV/Detection/mmdetection/configs/yolox/: yolox_s_8x8_300e_cmmd.py  yolox_s_8x8_300e_coco.py
DeepLearning/CV/ImageClassification/: experiments.ipynb  run_train.sh  train.py  train_gridsearch.py
DeepLearning/CV/ImageClassification/ImageNetKaggle/: ImageNetKaggle.ipynb
DeepLearning/CV/ImageClassification/ViT_Book/: example.ipynb  main.py  trainViT.ipynb  trainViT.py  visualizeResult.ipynb  vit.py
DeepLearning/CV/ImageClassification/config/: alexnet_cifar10.yaml  alexnet_cifar10_grid.yaml  alexnet_imagenet.yaml  vit_cifar10.yaml  vit_imagenet.yaml
DeepLearning/CV/ImageClassification/examples/: CNN_Flax_NMIST.ipynb  train_with_ray.ipynb  train_with_ray.py
DeepLearning/CV/ImageClassification/models/: alexnet.py  resnet.py  simpleCNN.py  vit.py
DeepLearning/NLP/: NER-bert-base.ipynb  README.md
DeepLearning/NLP/Classification/: BERT.ipynb
DeepLearning/NLP/Classification/BERT-en/: BERT-en.ipynb
DeepLearning/NLP/Classification/BERT-ja/: .gitignore  BERT-ja.ipynb  dataset.py  test.py  train.py
DeepLearning/NLP/NER/: config.cfg
DeepLearning/NLP/NER/NER-en/: .gitignore  NER-Spacy-0.ipynb  NER-Spacy-withTraining.ipynb  NER-bert-base.ipynb
DeepLearning/NLP/NER/NER-ja/: NER-ja-0.ipynb  base_config.cfg  streamlit_spacy.py
DeepLearning/NLP/NER/model-last/: config.cfg  meta.json
DeepLearning/NLP/NER/model-last/vocab/: strings.json
datasets/: .gitignore  download_cifar10.sh  download_imagenet1k.sh
