[tool.poetry]
name = "ml-library"
version = "0.1.0"
description = ""
authors = ["ykjvs <yuki.kashiwada@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_library"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scikit-learn = "^1.2.0"
jax = {extras = ["cpu"], version = "^0.3.25"}
matplotlib = "^3.6.2"
tqdm = "^4.64.1"
numpy = "^1.23.2"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-1.13.0-cp310-none-macosx_11_0_arm64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/cpu/torchaudio-0.12.0-cp310-cp310-macosx_11_0_arm64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cpu/torchvision-0.13.0-cp310-cp310-macosx_11_0_arm64.whl"}
ipywidgets = "^8.0.3"
jaxlib = "^0.3.25"
flax = {git = "https://github.com/google/flax.git"}
tensorflow-datasets = "^4.7.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
