[tool.poetry]
name = "ml-library"
version = "0.1.0"
description = ""
authors = ["ykjvs <yuki.kashiwada@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_library"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tomli = { version = "^2.0.1", python = "<3.11" }
scikit-learn = "^1.2.0"
jax = {extras = ["cpu"], version = "^0.3.25"}
matplotlib = "^3.6.2"
tqdm = "^4.64.1"
numpy = "^1.23.2"
ipywidgets = "^8.0.3"
jaxlib = "^0.3.25"
flax = {git = "https://github.com/google/flax.git"}
tensorflow-datasets = "^4.7.0"
transformers = "^4.25.1"
spacy = {extras = ["apple"], version = "^3.4.4"}
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.2"
pandas = "^1.5.2"
spacy-streamlit = "^1.0.4"
tensorflow-macos = "^2.11.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.2"
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
